# QSQuoteFetcher

./: .env.example  .gitignore  =1.10.0  AGENTS.md  README.md  pyproject.toml  requirements.txt  settings.json  symbols.json
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/agents/: questrade-agent.agent.md
.github/instructions/: api.instructions.md  python.instructions.md  testing.instructions.md
.github/prompts/: add-symbol.prompt.md  error-handling.prompt.md  fetch-quotes.prompt.md  refresh-token.prompt.md
.github/skills/questrade-api/: SKILL.md
src/questrade/: __main__.py  config.py  gui.py  main.py
src/questrade/api/: auth.py  candles.py  client.py  markets.py  quotes.py  symbols.py
src/questrade/gui/: __init__.py  app.py  detail.py  dialogs.py  formatting.py  header.py  statusbar.py  styles.py  table.py  tray.py
src/questrade/models/: auth.py  candle.py  errors.py  market.py  quote.py  symbol.py
src/questrade/utils/: formatter.py
tests/fixtures/: quote_fixtures.py
tests/unit/: test_auth.py  test_quotes.py  test_symbols.py
